# backupETHZ

./: LICENSE  README.md
BigData/: 2019_Exercises_exercise01_Exercise01_SQL.ipynb  2019_Exercises_exercise02_Exercise02_Storage_and_API.ipynb  Exercise03_HDFS(1).ipynb  Exercise04_XML_JSON.ipynb  Exercise05_HBase.ipynb  Exercise06_Validation.ipynb  Exercise07_MapReduce.ipynb  Exercise07_MapReduce_Solution.ipynb  Exercise09_Spark_MongoDB.ipynb  Exercises_exercise00_Exercise00_Jupyter_Basics_SQL_Example.ipynb  Exercises_exercise01_Exercise01_SQL.ipynb  text.xml
HPCII/: diffusion2d_mpi.cpp  heat2d_mpi.cpp  modules.sh  modules_gpu.sh
HPCII/ex03/: task2.py
HPCII/ex04/: modules.sh
HPCII/ex05/: hpcse2-19_hw05_skeleton_codes.tar
Nummerical Methods for CSE/: arrowmatvec.cpp  get_start  getting_started.cpp  try
Nummerical Methods for CSE/PS11/templates_ps11/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  laser  laserquad_template.cpp  main  quadsingint_template.cpp  sol
Nummerical Methods for CSE/PS6/: CMakeCache.txt  CMakeLists.txt  LinearInterpolant.cpp  Makefile  cmake_install.cmake  dip  dipoleval.cpp  horner  horner.cpp  test.cpp  timer.cpp  timer.hpp  try
Nummerical Methods for CSE/PS6/solutions_ps6/: try
Scientific programming/: CMakeCache.txt  Makefile  chrono  chrono.cpp  chrono_2.cpp  cmake_install.cmake  eps  exam.cpp  example_week12.cpp  fib  fib.cpp  fib_2.cpp  gcd  gcd.cpp  gcd_rek.cpp  machine_e.cpp  main  square1  template_min.cpp  trafficlight_class_example.cpp  try
jdraw-assignment/: .classpath  .project  build.gradle
(+1222 files in other folders)
